Minor css fixes, added google maps api
- css fixes for mobile devices with small screen resolution
- resolved an issue with google maps not showing up on restourant review page.

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,16 +73,18 @@ nav h1 a {
   text-transform: uppercase;
 }
 #breadcrumb {
-    padding: 16px 40px;
+    padding: 10px 20px 16px;
     list-style: none;
     background-color: #eee;
-    border-right: 1px solid #999;
-    border-left: 1px solid #999;
+    width: calc(60% - 40px);
+    font-size: 17px;
+    margin: 0;
 }
 
 /* Display list items side by side */
 #breadcrumb li {
     display: inline;
+    font-size: 14pt;
 }
 
 /* Add a slash symbol (/) before/behind each list item */
@@ -122,7 +124,7 @@ nav h1 a {
 
 .filter-options {
   width: 100%;
-  height: 50px;
+  height: auto;
   background-color: #3397DB;
   align-items: center;
   padding: 10px;
@@ -330,7 +332,6 @@ nav h1 a {
 @media screen and (max-width: 635px) {
   #restaurant-container, #reviews-container, #breadcrumb {
     padding: 12px;
-    width: 100%;
   }
   .filter-options {
     flex-direction: column;
@@ -347,12 +348,16 @@ nav h1 a {
   }
 }
 
-@media screen and (min-width: 426px) {
+@media screen and (min-width: 650px) and (max-width: 768px) {
   #restaurant-container {
     padding-right: 20px;
   }
   #reviews-container {
     padding-left: 20px;
+  }
+  .filter-options select {
+    width: 200px;
+    height: 40px;
   }
 }
 
@@ -364,6 +369,12 @@ nav h1 a {
     margin: 15px 0;
     width: 270px;
   }
+  .filter-options select {
+    margin: 5px;
+    width: 200px;
+    height: 40px;
+  }
+
 }
 
 
